--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,6 +49,28 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <style>
+
+        html {
+            font-family: Georgia, Times, "Times New Roman", serif; 
+        }
+        
+        .logo{
+            font-family: 'Broadway', sans-serif;
+            font-size: 64px;
+            font-weight: bold;
+            background-color: black;
+            color: white;
+            padding: 5px 10px 5px 10px;
+            width: auto;
+            display: inline-block;
+            border-radius: 4px;
+            font-style: normal; 
+            font-variant: normal; 
+            font-weight: 700; 
+        }
+    </style>
+
     <!-- ga & ba script hoook -->
     <script></script>
 </head>
