--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,7 +48,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+    <link href="https://fonts.cdnfonts.com/css/broadway" rel="stylesheet">
     <style>
 
         html {
@@ -57,17 +57,8 @@
         
         .logo{
             font-family: 'Broadway', sans-serif;
-            font-size: 64px;
+            font-size: 24px;
             font-weight: bold;
-            background-color: black;
-            color: white;
-            padding: 5px 10px 5px 10px;
-            width: auto;
-            display: inline-block;
-            border-radius: 4px;
-            font-style: normal; 
-            font-variant: normal; 
-            font-weight: 700; 
         }
     </style>
 
