--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,11 +35,11 @@
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 
-    <!-- Hux Delete, sad but pending in China
+    
     <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/
     css'>
-    -->
+    
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -51,13 +51,10 @@
     <link href="https://fonts.cdnfonts.com/css/broadway" rel="stylesheet">
     <style>
 
-        html {
-            font-family: Georgia, Times, "Times New Roman", serif; 
-        }
-        
         .logo{
             font-family: 'Broadway', sans-serif;
             font-weight: bold;
+            font-size: 25px;
         }
     </style>
 
