--- a/_includes/head.html
+++ b/_includes/head.html
@@ -60,4 +60,13 @@
 
     <!-- ga & ba script hoook -->
     <script></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VEP0CTE9MS"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-VEP0CTE9MS');
+    </script>
 </head>
