--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,10 +52,18 @@
     <style>
 
         .logo{
-            font-family: 'Broadway', sans-serif;
+            font-family: 'Broadway Regular', sans-serif;
             font-weight: bold;
             font-size: 25px;
         }
+    </style>
+
+    <style>
+    @font-face {font-family: 'Broadway Regular'; src: url('/fonts/BroadwayLT.woff2') format('woff2'), url('/fonts/BroadwayLT.woff') format('woff'), url('/fonts/BroadwayLT.ttf') format('truetype'); font-weight: normal; font-style: normal; font-display: swap;}
+    .font-BroadwayLT {font-family: 'Broadway Regular', sans-serif;}
+    @font-face {font-family: 'Broadway Engraved'; src: url('/fonts/BroadwayEngravedLT.woff2') format('woff2'), url('/fonts/BroadwayEngravedLT.woff') format('woff'), url('/fonts/BroadwayEngravedLT.ttf') format('truetype'); font-weight: normal; font-style: normal; font-display: swap;}
+    .font-BroadwayEngravedLT {font-family: 'Broadway Engraved', sans-serif;}
+    
     </style>
 
     <!-- ga & ba script hoook -->
