--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -58,7 +58,7 @@
                     {% endif %}
                 </ul>
                 <p class="copyright text-muted">
-                    Copyright &copy; {{ site.title }} 2022
+                    Copyright &copy; <span class="font-BroadwayLT">{{ site.title }}</span> 2022
                    
                 </p>
             </div>
