--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,7 +41,6 @@
     css'>
     
 
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -50,11 +49,17 @@
     <![endif]-->
     <link href="https://fonts.cdnfonts.com/css/broadway" rel="stylesheet">
     <style>
-
+        .textlogo{
+            font-family: 'Broadway Regular', sans-serif;
+        }
         .logo{
             font-family: 'Broadway Regular', sans-serif;
             font-weight: bold;
             font-size: 25px;
+        }
+        .site-heading h1{
+            font-family: 'Broadway Engraved', sans-serif;
+            font-weight: 400;
         }
     </style>
 
