--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -227,5 +227,12 @@
         });
     });
 </script>
+
+  
+    <!-- ribbon -->
+    <script type="text/javascript" src="/js/ribbonDynamic.js"></script>
+  
+
+
 {% endif %}
 
