--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,9 +28,20 @@
 
     <!-- Pygments Github CSS -->
     <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/rocket.css" | prepend: site.baseurl }}"/>
+    
 
     <!-- Wave CSS -->
     <link rel="stylesheet" href="{{ "/css/wave.css" | prepend: site.baseurl }}">
+
+    <!-- top start (article top hot config) -->
+    <link rel="stylesheet" href="{{ "/css/top.css" | prepend: site.baseurl }}">
+    <!-- top end -->
+
+    <!-- ThemeColor start -->
+    <link rel="stylesheet" href="{{ "/css/scroll.css" | prepend: site.baseurl }}"/>
+    <!-- ThemeColor end -->
+
 
     <!-- Custom Fonts -->
     <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
