--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,38 @@
 {% include head.html %}
 
 <!-- hack iOS CSS :active style -->
-<body ontouchstart="">
+<body ontouchstart="" class="body--dark body--dark">
+    <div class="toggle" onclick="document.body.classList.toggle('body--light')">
+        <i class="mdui-icon material-icons light-mode"></i>
+        <i class="mdui-icon material-icons dark-mode"></i>
+    </div>
+    <script>
+        //getCookieValue
+        function getCookieValue(a) {
+          var b = document.cookie.match('(^|[^;]+)\\s*' + a + '\\s*=\\s*([^;]+)');
+          return b
+            ? b.pop()
+            : '';
+        }
+        let themeMode = 'light';
+        if (getCookieValue('sb-color-mode') && (getCookieValue('sb-color-mode') !== themeMode)) {
+          let dbody = document.body.classList;
+          themeMode === 'dark' ? dbody.remove('body--dark') : dbody.add('body--dark');
+        }
+      
+        //setCookieValue
+        var toggleBtn = document.querySelector(".toggle");
+        toggleBtn.addEventListener("click", function () {
+          var e = document.body.classList.contains("body--dark");
+          var cookieString = e
+            ? "dark"
+            : "light";
+          var exp = new Date();
+          exp.setTime(exp.getTime() + 3 * 24 * 60 * 60 * 1000);
+          document.cookie = "sb-color-mode=" + cookieString + ";expires=" + exp.toGMTString() + ";path=/";
+        });
+      </script>
+
 
     {% include nav.html %}
 
