--- a/css/rocket.css
+++ b/css/rocket.css
@@ -1,8 +1,8 @@
 .body--light {
-  --rocket-background-url: url("images/beside_up.png") no-repeat 50% 0;
+  --rocket-background-url: url("img/app/rocket.png") no-repeat 50% 0;
 }
 .body--dark {
-  --rocket-background-url: url("images/beside_up_white.png") no-repeat 50% 0;
+  --rocket-background-url: url("img/app/rocket.png") no-repeat 50% 0;
 }
 #rocket {
   position: fixed;
@@ -10,9 +10,9 @@
   bottom: 50px;
   display: block;
   visibility: hidden;
-  width: 44px;
-  height: 45px;
-  background: var(--rocket-background-url);
+  width: 42px;
+  height: 43px;
+  background: url("images/rocket.png") no-repeat 50% 0;
   opacity: 0;
   -webkit-transition: visibility 0.6s cubic-bezier(0.6, 0.04, 0.98, 0.335), opacity 0.6s cubic-bezier(0.6, 0.04, 0.98, 0.335), -webkit-transform 0.6s cubic-bezier(0.6, 0.04, 0.98, 0.335);
   -moz-transition: visibility 0.6s cubic-bezier(0.6, 0.04, 0.98, 0.335), opacity 0.6s cubic-bezier(0.6, 0.04, 0.98, 0.335), -moz-transform 0.6s cubic-bezier(0.6, 0.04, 0.98, 0.335);
@@ -29,7 +29,7 @@
   display: block;
   margin-top: 48px;
   height: 14px;
-  background: url("images/beside_up.png") no-repeat 50% -20px;
+  background: url("images/rocket.png") no-repeat 50% -20px;
   opacity: 0.5;
   -webkit-transition: -webkit-transform 0.2s;
   -moz-transition: -moz-transform 0.2s;
@@ -39,7 +39,7 @@
   transform-origin: 50% 0;
 }
 #rocket:hover {
-  background-position: 50% -44px !important;
+  background-position: 50% -44px;
 }
 #rocket:hover i {
   background-position: 50% 100%;
