--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 {% include head.html %}
 
 <!-- hack iOS CSS :active style -->
-<body ontouchstart="" class="body--dark body--dark">
+<body ontouchstart="" class="body--light">
     <div class="toggle" onclick="document.body.classList.toggle('body--light')">
         <i class="mdui-icon material-icons light-mode"></i>
         <i class="mdui-icon material-icons dark-mode"></i>
