--- a/css/rocket.css
+++ b/css/rocket.css
@@ -1,8 +1,8 @@
 .body--light {
-  --rocket-background-url: url("img/app/rocket.png") no-repeat 50% 0;
+  --rocket-background-url: url("/img/app/rocket.png") no-repeat 50% 0;
 }
 .body--dark {
-  --rocket-background-url: url("img/app/rocket.png") no-repeat 50% 0;
+  --rocket-background-url: url("/img/app/rocket.png") no-repeat 50% 0;
 }
 #rocket {
   position: fixed;
@@ -12,7 +12,7 @@
   visibility: hidden;
   width: 42px;
   height: 43px;
-  background: url("images/rocket.png") no-repeat 50% 0;
+  background: url("/img/app/rocket.png") no-repeat 50% 0;
   opacity: 0;
   -webkit-transition: visibility 0.6s cubic-bezier(0.6, 0.04, 0.98, 0.335), opacity 0.6s cubic-bezier(0.6, 0.04, 0.98, 0.335), -webkit-transform 0.6s cubic-bezier(0.6, 0.04, 0.98, 0.335);
   -moz-transition: visibility 0.6s cubic-bezier(0.6, 0.04, 0.98, 0.335), opacity 0.6s cubic-bezier(0.6, 0.04, 0.98, 0.335), -moz-transform 0.6s cubic-bezier(0.6, 0.04, 0.98, 0.335);
@@ -29,7 +29,7 @@
   display: block;
   margin-top: 48px;
   height: 14px;
-  background: url("images/rocket.png") no-repeat 50% -20px;
+  background: url("/img/app/rocket.png") no-repeat 50% -20px;
   opacity: 0.5;
   -webkit-transition: -webkit-transform 0.2s;
   -moz-transition: -moz-transform 0.2s;
