--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,8 @@
 {% include head.html %}
 
 <!-- hack iOS CSS :active style -->
-<body ontouchstart="" class="body--light">
-    <div class="toggle" onclick="document.body.classList.toggle('body--light')">
+<body ontouchstart="" class="body--light body--light">
+    <div class="toggle" onclick="document.body.classList.toggle('body--dark')">
         <i class="mdui-icon material-icons light-mode"></i>
         <i class="mdui-icon material-icons dark-mode"></i>
     </div>
