--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,6 +9,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+            <div class="toggle" onclick="document.body.classList.toggle('body--dark')">
+                <i class="mdui-icon material-icons light-mode" style="
+                    font-size: 20px !important;
+                "></i>
+                        <i class="mdui-icon material-icons dark-mode" style="
+                    font-size: 20px !important;
+                "></i>
+                    </div>
             <a class="logo navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
         </div>
 
