--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,11 @@
 
     {% include nav.html %}
 
+  <!-- progress -->
+  <div id="progress">
+    <div class="line" style="width: 0%;"></div>
+  </div>
+
     {{ content }}
 
     {% include footer.html %}
