--- a/css/themecolor.css
+++ b/css/themecolor.css
@@ -958,21 +958,21 @@ textarea.gt-header-textarea::placeholder {
   float: right;
   background: none;
   padding: 18px 10px;
-  position: fixed;
+  /*position: fixed;*/
   bottom: 1rem;
   left: 2.5rem;
   /* background-color: var(--background-color); */
   color: var(--toggle-color);
   /* border: 1px dotted var(--toggle-border-color); */
-  padding: 1.5rem 1.5rem;
+  /* padding: 1.5rem 1.5rem;*/
   z-index: 20;
   cursor: pointer;
   text-transform: uppercase;
   line-height: normal;
-  border-radius: 50%;
+  /*border-radius: 50%;
   width: 60px;
   min-width: 60px;
-  height: 60px;
+  height: 60px;*/
 }
 
 .material-icons {
