--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -448,7 +448,7 @@ pre code {
     background: none;
   }
 }
-@media only screen and (min-width: 1170px) {
+@media only screen and (min-width: 200px) {
   .navbar-custom {
     -webkit-transition: background-color 0.3s;
     -moz-transition: background-color 0.3s;
@@ -488,11 +488,16 @@ pre code {
   }
   .navbar-custom.is-visible {
     /* if the user changes the scrolling direction, we show the header */
+    background: linear-gradient(-225deg, #e3fdf5 0, #ffe6fa 100%);
     -webkit-transform: translate3d(0, 100%, 0);
     -moz-transform: translate3d(0, 100%, 0);
     -ms-transform: translate3d(0, 100%, 0);
     -o-transform: translate3d(0, 100%, 0);
     transform: translate3d(0, 100%, 0);
+  }
+
+  .navbar-custom.is-visible.toggle {
+    color: var(--navbar-brand-color_1170);
   }
 }
 .intro-header {
