--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -385,6 +385,7 @@ pre code{
 		}
 		&.is-visible {
 			/* if the user changes the scrolling direction, we show the header */
+			background: linear-gradient(-225deg, #e3fdf5 0, #ffe6fa 100%);
 			-webkit-transform: translate3d(0, 100%, 0);
 			-moz-transform: translate3d(0, 100%, 0);
 			-ms-transform: translate3d(0, 100%, 0);
