--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -392,6 +392,9 @@ pre code{
 			-o-transform: translate3d(0, 100%, 0);
 			transform: translate3d(0, 100%, 0);
 		}
+		&.is-visible.toggle {
+			color: var(--navbar-brand-color_1170);
+		}
 	}
 }
 
