--- a/_includes/head.html
+++ b/_includes/head.html
@@ -79,6 +79,12 @@
             font-family: 'Broadway Engraved', sans-serif;
             font-weight: 400;
         }
+        .post-preview>.post-meta {
+            font-family: Helvetica,Arial,sans-serif;
+        }
+        .intro-header .post-heading .meta {
+            font-family: Helvetica,Arial,sans-serif;
+        }
     </style>
 
     <style type="text/css">
