--- a/_includes/head.html
+++ b/_includes/head.html
@@ -57,6 +57,22 @@
     <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/
     css'>
+
+    <style>
+      @font-face {
+        font-family: 'Broadway Regular'; 
+        src: url('/fonts/BroadwayW01.woff2') format('woff2'),  url('/fonts/BroadwayW01.woff') format('woff'), url('/fonts/BroadwayW01.ttf') format('truetype'); 
+        font-weight: normal; 
+        font-style: normal; 
+        font-display: swap;}
+      .font-BroadwayLT {font-family: 'Broadway Regular', sans-serif;}
+      @font-face {
+        font-family: 'Broadway Engraved'; src: url('/fonts/BroadwayMTW04-Engraved.woff2') format('woff2'), url('/fonts/BroadwayMTW04-Engraved.woff') format('woff'), url('/fonts/BroadwayMTW04-Engraved.ttf') format('truetype'); 
+        font-weight: normal; 
+        font-style: normal; 
+        font-display: swap;}
+      .font-BroadwayEngravedLT {font-family: 'Broadway Engraved', sans-serif;}
+    </style>
     
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -65,7 +81,10 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <link href="https://fonts.cdnfonts.com/css/broadway" rel="stylesheet">
+    <!--<link href="https://fonts.cdnfonts.com/css/broadway" rel="stylesheet">-->
+
+
+
     <style>
         .textlogo{
             font-family: 'Broadway Regular', sans-serif;
@@ -102,14 +121,6 @@
     i.mdui-icon.material-icons.dark-mode {
       display: var(--dark-mode);
     }
-    </style>
-
-    <style>
-    @font-face {font-family: 'Broadway Regular'; src: url('/fonts/BroadwayLT.woff2') format('woff2'), url('/fonts/BroadwayLT.woff') format('woff'), url('/fonts/BroadwayLT.ttf') format('truetype'); font-weight: normal; font-style: normal; font-display: swap;}
-    .font-BroadwayLT {font-family: 'Broadway Regular', sans-serif;}
-    @font-face {font-family: 'Broadway Engraved'; src: url('/fonts/BroadwayEngravedLT.woff2') format('woff2'), url('/fonts/BroadwayEngravedLT.woff') format('woff'), url('/fonts/BroadwayEngravedLT.ttf') format('truetype'); font-weight: normal; font-style: normal; font-display: swap;}
-    .font-BroadwayEngravedLT {font-family: 'Broadway Engraved', sans-serif;}
-    
     </style>
 
     <!-- ga & ba script hoook -->
