--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,7 +39,7 @@
     <!-- top end -->
 
     <!-- Scroll start -->
-    <link rel="stylesheet" href="{{ "/css/scroll.css" | prepend: site.baseurl }}"/>
+    <!--<link rel="stylesheet" href="{{ "/css/scroll.css" | prepend: site.baseurl }}"/>-->
     <!-- Scroll end -->
 
 
