--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,9 +28,8 @@
 
     <!-- Pygments Github CSS -->
     <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/css/rocket.css" | prepend: site.baseurl }}"/>
+    <link rel="stylesheet" href="{{ "/css/rocket.css" | prepend: site.baseurl }}">
     
-
     <!-- Wave CSS -->
     <link rel="stylesheet" href="{{ "/css/wave.css" | prepend: site.baseurl }}">
 
@@ -39,12 +38,11 @@
     <!-- top end -->
 
     <!-- Scroll start -->
-    <!--<link rel="stylesheet" href="{{ "/css/scroll.css" | prepend: site.baseurl }}"/>-->
+    <link rel="stylesheet" href="{{ "/css/scroll.css" | prepend: site.baseurl }}">
     <!-- Scroll end -->
 
-
     <!-- ThemeColor start -->
-    <link rel="stylesheet" href="{{ "/css/themecolor.css" | prepend: site.baseurl }}"/>
+    <link rel="stylesheet" href="{{ "/css/themecolor.css" | prepend: site.baseurl }}">
     <!-- ThemeColor end -->
 
     <!-- Custom Fonts -->
@@ -53,7 +51,7 @@
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    
+
     <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/
     css'>
@@ -74,7 +72,6 @@
       .font-BroadwayEngravedLT {font-family: 'Broadway Engraved', sans-serif;}
     </style>
     
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -83,9 +80,10 @@
     <![endif]-->
     <!--<link href="https://fonts.cdnfonts.com/css/broadway" rel="stylesheet">-->
 
-
-
     <style>
+        article {
+            overflow: hidden;
+        }
         .textlogo{
             font-family: 'Broadway Regular', sans-serif;
         }
