--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -17,7 +17,7 @@ layout: default
         background: rgba(0,0,0, {{ page.header-mask }});
     }
     {% endif %}
-    .container
+    body
     {
         background-color: #fff;
     }
@@ -33,7 +33,7 @@ layout: default
                         <a class="tag" href="{{ site.baseurl }}/tags/#{{ tag }}" title="{{ tag }}">{{ tag }}</a>
                         {% endfor %}
                     </div>
-                    <h1>{{ page.name }}</h1>
+                    <h1>{{ page.title }}</h1>
                     {% comment %}
                         always create a h2 for keeping the margin , Hux
                     {% endcomment %}
