--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -21,7 +21,8 @@ layout: default
     {
         background-color: #fff;
     }
-    .post-heading {
+    @media only screen and (min-width: 768px)
+    .intro-header .site-heading, .intro-header .post-heading, .intro-header .page-heading {
         padding: 50px 50px 10px 50px;
     }
 </style>
