--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -39,7 +39,7 @@ layout: default
                         <a class="tag" href="{{ site.baseurl }}/tags/#{{ tag }}" title="{{ tag }}">{{ tag }}</a>
                         {% endfor %}
                     </div>
-                    <h2>{{ page.subtitle }}</h2>
+                    <p>{{ page.subtitle }}</p>
                     {% comment %}
                         always create a h2 for keeping the margin , Hux
                     {% endcomment %}
