--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,8 +29,8 @@
                     </li>
                     {% for page in site.pages %}
                         {% if page.title %}
-                            {% if page.no-nav %}
-                            
+                            {% if page.nonav %}
+
                             {% else %}
                             <li>
                                 <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
